# h2o-bench-tpcc

./: CMakeLists.txt  Dockerfile  README.md  benchmark_config.toml  docker-entrypoint.sh
.github/workflows/: ci.yml
rfd/: 0001-tpcc-scaling.md  0002-zonefabric-scaling.md  0003-assetcdn-scaling.md  0004-cassie-scaling.md  0005-actor-lite-architecture.md  0006-cockroachdb-selection.md  0006-fdb-selection.md  0007-h2o-tfb-reuse.md  0008-verification-strategy.md  0009-fdb-keyspace-design.md  0010-binary-value-encoding.md  0011-async-fdb-callback-chain.md  0012-data-loader.md  0013-benchmark-harness.md  0014-ci-pipeline.md  0015-techempower-benchmark.md  0016-zstd-compression.md  0017-slotmap-entity-storage.md  0018-macaroon-xdp-security.md  0019-feature-ablation.md  0020-pert-critical-path.md  0021-cruciblebench-ablation-domain.jsonld  0021-cruciblebench-ablation.md  README.md
rfd/sql/: assetcdn_schema.sql  cassie_schema.sql  tpcc_schema.sql
sql/: tpcc_schema.sql  zonefabric_schema.sql
src/: error.h  event_loop.h  fdb_database.c  fdb_database.h  global_data.h  list.h  main.c  spsc_ring.c  spsc_ring.h  thread.c  thread.h  tpcc_kv.c  tpcc_kv.h  tpcc_loader.c  utility.c  utility.h  worker_pool.c  worker_pool.h
src/handlers/: tfb_handlers.c  tfb_handlers.h  tpcc_handler_data.h  tpcc_handlers.c  tpcc_harness.c  tpcc_harness.h  tpcc_new_order.c  tpcc_new_order.h  tpcc_payment.c  tpcc_payment.h  tpcc_procedures.c  tpcc_procedures.h  tpcc_read_txns.c  tpcc_read_txns.h
test/cbmc/: README.md  nurand_harness.c  random_harness.c  spsc_harness.c
test/verification/: Main.lean  README.md  lakefile.lean
test/verification/TpccVerification/: Basic.lean  Spsc.lean
